<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_verification"
            android:title="@string/menu_verification" />
        <item
            android:id="@+id/nav_list_item"
            android:title="@string/menu_list_item" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
