<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlternativeFiles">

    <TextView
        android:id="@+id/Alternative_Files_Message"
        android:layout_width="366dp"
        android:layout_height="88dp"
        android:text="@string/please_upload_an_eviction_letter_or_a_valid_homeless_shelter_document"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <ImageButton
        android:id="@+id/select_alt_file"
        android:layout_width="61dp"
        android:layout_height="67dp"
        android:layout_marginTop="92dp"
        android:src="@android:drawable/ic_menu_upload_you_tube"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Alternative_Files_Message"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/upload_alt_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_alt_file" />

</androidx.constraintlayout.widget.ConstraintLayout>